--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -10,7 +10,7 @@ html, body {
   }
   
   .container {
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(2px);
     background-color: rgba(255, 255, 255, 0);
     padding: 1rem;
     border-radius: 8px;
@@ -36,16 +36,69 @@ html, body {
     display: flex;
     gap: 4px;
     justify-content: center;
-    padding-bottom: 10px;
+    padding-bottom: 3px;
+    padding-top: 5px;
     flex-wrap: wrap;
   }
   
   .timeline-dot {
     width: 12px;
     height: 12px;
-    border-radius: 50%;
+    border-radius: 40%;
     background-color: gray;
     transition: background-color 0.3s ease;
     mix-blend-mode: screen;
   }
-  
+
+
+.topnav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(6px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.nav-item {
+  width: 50%;
+  padding: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-size: 0.8rem;
+  border-bottom: 2px solid transparent;
+}
+
+.nav-item.active {
+  border-bottom: 2px solid #00d1b25d;
+}
+
+.page {
+  padding: 0.5rem;
+}
+
+.page.hidden {
+  display: none;
+}
+
+.column-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+
+/* .item {
+  flex: 1;
+  padding: 0.75rem;
+  background-color: #222;
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+} */
