--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,3 @@
-
 html, body {
     margin: 0;
     padding: 0;
@@ -102,3 +101,32 @@ html, body {
   text-align: center;
   border-radius: 6px;
 } */
+
+.results-container {
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: calc(100vh - 4rem);
+  padding: 0.5rem;
+  gap: 0.5rem;
+}
+
+.result-box {
+  border-radius: 8px;
+  padding: 8px 4px;
+  color: white;
+  width: 100%;
+  font-size: 0.75rem;
+  background-color: rgba(68, 68, 68, 0.25); /* default fallback color */
+}
+
+.result-chance {
+  font-weight: bold;
+  font-size: 0.9rem;
+  margin-bottom: 0.25rem;
+}
+
+.result-message {
+  font-size: 0.8rem;
+}
